--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header class="cabeçalho">
+      <img class src="icone.jpeg" alt="">
       <ul class="lista de cabeçalho">
         <li class="item_lista_cabeçalho">pinturas</li>
         <li class="item_lista_cabeçalho">quadros</li>
