--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="cabeçalho">
       <img class src="icone.jpeg" alt="">
-      <ul class="lista de cabeçalho">
+      <ul class="lista_de_cabeçalho">
         <li class="item_lista_cabeçalho">pinturas</li>
         <li class="item_lista_cabeçalho">quadros</li>
         <li class="item_lista_cabeçalho">sucesso</li>
