--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </ul>
     </header>
 
-    <h1>vicent van gogh</h1>
+    <h1>vicent van goghh</h1>
     <p>uma das figuras mais famosas e influentes da historia da arte ocidental</body>/p>
     <img src="van-gogh-produziu-a-noite-estrelada-quando-estava-internado-em-um-hospital-psiquiatrico-em-1889-na-franca-5aaa957cb5181.webp" alt="">
      <img src="vangoghmuseum-s0022v1962-1920.webp" alt="">
