--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <header class="cabeçalho">
       <img class src="icone.jpeg" alt="">
       <ul class="lista_de_cabeçalho">
-        <li class="item_lista_cabeçalho">pinturas</li>
-        <li class="item_lista_cabeçalho">quadros</li>
+        <li class="item_lista_cabeçalho"><a href="index.html"> pinturas</a></li>
+        <li class="item_lista_cabeçalho"><a href="quadros.html"> quadros</a></li>
         <li class="item_lista_cabeçalho">sucesso</li>
+        
       </ul>
     </header>
 
