--- a/quadros.html
+++ b/quadros.html
@@ -17,5 +17,6 @@
       </ul>
     </header>
 <img src="a_igreja_de_auvers_c.webp" alt="">
+<img src="campodetrigocomciprestes.jpg" alt="">
     </body>
 </html>
