--- a/quadros.html
+++ b/quadros.html
@@ -18,5 +18,6 @@
     </header>
 <img src="a_igreja_de_auvers_c.webp" alt="">
 <img src="campodetrigocomciprestes.jpg" alt="">
+<img src="os-girassois-van-gogh.webp" alt="">
     </body>
 </html>
