--- a/quadros.html
+++ b/quadros.html
@@ -19,5 +19,6 @@
 <img src="a_igreja_de_auvers_c.webp" alt="">
 <img src="campodetrigocomciprestes.jpg" alt="">
 <img src="os-girassois-van-gogh.webp" alt="">
+<img src="autorretrato_van_gogh.webp" alt="">
     </body>
 </html>
