--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="cabeçalho">
-      <img class src="icone.jpeg" alt="">
+      <img class src="icone.webp" alt="">
       <ul class="lista_de_cabeçalho">
         <li class="item_lista_cabeçalho"><a href="index.html"> pinturas</a></li>
         <li class="item_lista_cabeçalho"><a href="quadros.html"> quadros</a></li>
