--- a/quadros.html
+++ b/quadros.html
@@ -12,7 +12,7 @@
       <ul class="lista_de_cabeçalho">
         <li class="item_lista_cabeçalho"><a href="index.html"> pinturas</a></li>
         <li class="item_lista_cabeçalho"><a href="quadros.html"> quadros</a></li>
-        <li class="item_lista_cabeçalho">sucesso</li>
+        <li class="item_lista_cabeçalho"><a href="sucesso.html"> sucesso</a></li>
         
       </ul>
     </header>
