--- a/quadros.html
+++ b/quadros.html
@@ -20,5 +20,6 @@
 <img src="campodetrigocomciprestes.jpg" alt="">
 <img src="os-girassois-van-gogh.webp" alt="">
 <img src="autorretrato_van_gogh.webp" alt="">
+<img src="avinha.jpg" alt=""
     </body>
 </html>
