--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 
     <h1>vicent van gogh</h1>
                      <p>pinturas mais famosas</body>
+                     <p>a noite estrelada</body>
+                     </p>lírios</body>
+                     </p>os comedores de batata</body>
+                     </p>os girassóis</body>
     <img src="van-gogh-produziu-a-noite-estrelada-quando-estava-internado-em-um-hospital-psiquiatrico-em-1889-na-franca-5aaa957cb5181.webp" alt="">
      <img src="vangoghmuseum-s0022v1962-1920.webp" alt="">
     <img src="download.jpeg" alt="">
